# buckeye-claw

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  EVENT-LOOP-PLAN.md  README.md  agent.py  dw.excalidraw  grubhub_server.py  main.py  memory-test.py  orchestrator.py  package-lock.json  pyproject.toml  requirements.txt  test_grubhub.py  test_tools.py  test_wiring.py
.github/workflows/: deploy.yml
agents/: __init__.py  factories.py  models.py  orchestrator.py  tracer.py
auth/: __init__.py  client.py  users.py
backend/integrations/buckeyelink/: README.md  __init__.py  auth.py  browser_agent.py  check_holds.py  config.py  enhancer.py  main.py  tools.py
backend/integrations/buckeyemail/: auth.py  client.py  token_store.py  tools.py
backend/integrations/campus/: athletics.py  buildings.py  bus.py  calendar.py  classes.py  dining.py  directory.py  events.py  foodtrucks.py  library.py  merchants.py  parking.py  recsports.py  studentorgs.py  utils.py
backend/integrations/canvas/: api.py  tools.py
backend/integrations/grubhub/: automation.py  intelligence.py  notify.py  scheduler.py  server.py  tools.py
backend/messaging/: sender.py  webhook.py
buckeyelink/: __init__.py  auth.py  browser_agent.py  enhancer.py  knowledge.py  main.py  tools.py
buckeyelink/workflows/: enroll.py  financial.py  grades.py  holds.py  schedule.py
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: layout.tsx
frontend/app/connect/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/waitlist/: page.tsx
frontend/components/: AuthPanel.tsx  DomainHero.tsx  GlassPanel.tsx  GraphBg.tsx  InputBar.tsx  LeftRail.tsx  SMSMessageRow.tsx  ToolCallCard.tsx
frontend/components/domain/: AssignmentRow.tsx  DiningCard.tsx  EventRow.tsx  GradeBar.tsx  ParkingRing.tsx  ScheduleGrid.tsx
frontend/lib/supabase/: hooks.ts  server.ts
frontend/public/: buckeyeclaw.vcf
grubhub/: automation.py  emulator.py  scheduler.py  tools.py
memory/: MemoryDiagram.excalidraw  MemoryDiagramSlide.excalidraw  __init__.py  db.py  module.py  prompts.py
messaging/: webhook.py
research/: osu-tech-complaints.md
supabase/migrations/: 001_memory.sql  002_voyage_embedding.sql  003_last_reply.sql
tests/: conftest.py  test_auth.py  test_db_integration.py  test_follow_up.py  test_full_memory_integration.py  test_llm_eval.py  test_memory.py  test_semantic_integration.py
tools/: bus.py  dining.py
web/: .env.local
web/app/: globals.css
web/app/app/: layout.tsx
web/app/connect/: page.tsx
web/components/: DomainHero.tsx  GlassPanel.tsx  InputBar.tsx  LeftRail.tsx  SMSMessageRow.tsx  ScanLine.tsx  ToolCallCard.tsx
web/components/domain/: AssignmentRow.tsx  (+5 more)
(+28 files in other folders)
