[project]
name = "buckeyeclaw"
version = "0.1.0"
description = "Unified AI agent for Ohio State University students via iMessage, RCS, and SMS"
requires-python = ">=3.11"
dependencies = [
    "beeai-framework",
    "ibm-watsonx-ai",
    "anthropic",
    "flask",
    "httpx",
    "python-dotenv",
    "canvasapi",
    "supabase",
    "openai",
    "pydantic>=2.0",
]

[project.optional-dependencies]
grubhub = [
    "Appium-Python-Client",
]
buckeyelink = [
    "playwright",
    "browser-use",
    "beeai-framework[anthropic]",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
