[project]
name = "buckeyeclaw"
version = "0.1.0"
description = "Unified AI agent for Ohio State University students via iMessage, RCS, and SMS"
requires-python = ">=3.11"
dependencies = [
    "beeai-framework",
    "ibm-watsonx-ai",
    "anthropic",
    "flask",
    "httpx",
    "python-dotenv",
    "canvasapi",
    "apscheduler>=3.10,<4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
grubhub = [
    "Appium-Python-Client",
]
buckeyelink = [
    "playwright",
    "browser-use",
    "beeai-framework[anthropic]",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "backend*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
