[project]
name = "buckeyeclaw"
version = "0.1.0"
description = "Unified AI agent for Ohio State University students via iMessage, RCS, and SMS"
requires-python = ">=3.11"
dependencies = [
    "beeai-framework",
    "ibm-watsonx-ai",
    "anthropic",
    "flask",
    "httpx",
    "python-dotenv",
    "canvasapi",
    "supabase",
    "voyageai",
    "apscheduler>=3.10,<4",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "msal",
]

[project.optional-dependencies]
grubhub = [
    "Appium-Python-Client",
]
buckeyelink = [
    "playwright",
    "browser-use",
    "beeai-framework[anthropic]",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: requires SUPABASE_URL and SUPABASE_API_KEY",
    "semantic: requires Supabase + VOYAGE_API_KEY for pgvector ranking tests",
    "llm: requires WATSONX credentials for Granite LLM quality tests",
    "e2e: requires all credentials for full MemoryModule pipeline tests",
]

[tool.setuptools.packages.find]
include = ["memory*", "auth*", "backend*", "agents*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pg8000>=1.31.5",
]
